force-app/main/default/objects/Schedule_External_Report__c/Schedule_External_Report__c.object-meta.xml
<CustomObject>
    <label>Schedule External Report</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Schedule external report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule External Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>