force-app/main/default/objects/Schedule_External_Report__c/fields/Is_Batch_Triggered_on_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch_Triggered_on_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch Triggered on End Date</label>
    <type>Checkbox</type>
</CustomField>