force-app/main/default/objects/Schedule_External_Report__c/fields/NextBatchDate__c.field-meta.xml
<CustomField>
    <fullName>NextBatchDate__c</fullName>
    <label>NextBatchDate</label>
    <type>Date</type>
</CustomField>