force-app/main/default/objects/Schedule_External_Report__c/fields/Report_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_1_Name__c</fullName>
    <label>Report 1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>