force-app/main/default/objects/Schedule_External_Report__c/fields/Report_3_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_3_Id__c</fullName>
    <label>Report 3 Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>