force-app/main/default/objects/Schedule_External_Report__c/fields/Schedule_external_report_name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_external_report_name__c</fullName>
    <label>Schedule external report name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>